--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,3 +6,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 # post processing
 RUN echo "alias ls='ls --color=auto'" >> /etc/bash.bashrc
 
+# ====== settings for git / ssh =======
+RUN echo "mkdir -p /root/.ssh" >> /etc/bash.bashrc
+RUN echo "cp /root/.ssh_host/* /root/.ssh/" >> /etc/bash.bashrc
+RUN echo "chmod 600 /root/.ssh/*" >> /etc/bash.bashrc
